Added : Update Label by ID and Delete Label and Swagger
