# app/controllers/label.js
@@ -1,9 +1,11 @@
 const validation = require('../utilities/validation.js');
 const { logger } = require('../../logger/logger');
 const labelService = require('../service/label');
+const redisjs=require('../middleware/redis')
 class Label {
    /**
-     * @description function written to create label into database
+     * @description function writt
+     * en to create label into database
      * @param {*} a valid req body is expected
      * @param {*} res
      */
@@ -48,34 +50,34 @@ class Label {
         });
       }
     };
-
-     /**
+    
+    /**
      * @description function written to get all labels
      * @param {*} req
      * @param {*} res
      */
 
-      getLabel = (req, res) => {
-        const id = req.user.dataForToken.id;
-        labelService.getLabel(id, (resolve, reject) => {
-          if (resolve.length > 0) {
-            logger.info('Found all labels');
-            res.status(200).send({
-              message: 'labels retrieved',
-              success: true,
-              data: resolve
-            });
-          } else {
-            logger.error('Label Not found');
-            res.status(404).send({
-              message: 'Labels not found ',
-              success: false
-            });
-          }
-        });
-      };
+    getLabel = (req, res) => {
+      const id = req.user.dataForToken.id;
+      labelService.getLabel(id, (resolve, reject) => {
+        if (resolve.length > 0) {
+          logger.info('Found all labels');
+          res.status(200).send({
+            message: 'labels retrieved',
+            success: true,
+            data: resolve
+          });
+        } else {
+          logger.error('Label Not found');
+          res.status(404).send({
+            message: 'Labels not found ',
+            success: false
+          });
+        }
+      });
+    };
 
-       /**
+     /**
      * @description function written  to get label by ID
      * @param {*} req
      *
@@ -83,29 +85,110 @@ class Label {
      */
 
     labelGetById = async (req, res) => {
-        try {
-          const id = { userId: req.user.dataForToken.id, noteId: req.params.id };
-          const data = await labelService.labelGetById(id);
-          if (data.message) {
-            return res.status(404).json({
-              message: 'label not found',
-              success: false
-            });
-          };
-          return res.status(200).json({
-            message: 'label retrieved succesfully',
-            success: true,
-            data: data
+      try {
+        const id = { userId: req.user.dataForToken.id, noteId: req.params.id };
+        const data = await labelService.labelGetById(id);
+        if (data.message) {
+          return res.status(404).json({
+            message: 'label not found',
+            success: false
           });
-        } catch (err) {
-          return res.status(500).json({
-            message: 'label not updated',
+        };
+        redisjs.setData("getLabelById", 60, JSON.stringify(data));
+        return res.status(200).json({
+          message: 'label retrieved succesfully',
+          success: true,
+          data: data
+        });
+      } catch (err) {
+        return res.status(500).json({
+          message: 'label not updated',
+          success: false,
+          data: err
+        });
+      }
+    };
+
+     /**
+     * @description function written to update label
+     * @param {*} a valid req body is expected
+     * @param {*} res
+     */
+
+    updateLabel =async (req, res) => {
+      try {
+        const updateLabel = {
+          id: req.params.id,
+          userId: req.userData.dataForToken.id,
+          labelName: req.body.labelName
+        };
+        console.log(updateLabel);
+        const valid = validation.validateLabel.validate(req.body);
+        if (valid.error) {
+          logger.error("Invalid label body");
+          return res.status(400).send({
+            message: "Please enter valid label",
             success: false,
-            data: err
+            error: valid.error
           });
         }
-      };
-  
-  
+        labelServices.updateLabelById(updateLabel, (error, data) => {
+          if (error) {
+            logger.error("failed to update label");
+            return res.status(400).json({
+              message: "failed to update label",
+              success: false
+            });
+          } else {
+            redisjs.clearCache("getLabelById");
+            logger.info("Successfully Update label");
+            return res.status(201).send({
+              message: "Successfully update label",
+              success: true,
+              data: data
+            });
+          }
+        });
+      } catch (error) {
+        logger.error('Label to be updated not foudn due to error');
+        return res.status(500).send({
+          message: 'Failed to update label',
+          success: false,
+          data: error
+        });
+      }
+    };
+
+    deleteLabelById = async (req, res) => {
+      try{
+        const id = { userId: req.user.dataForToken.id, labelId: req.params.id }; 
+        const deleteLabelValidation = validation.labeldeleteValidation.validate(id);
+        if (deleteLabelValidation.error) {
+          return res.status(400).send({
+            success: false,
+            message: 'Wrong Input Validations',
+            data: deleteLabelValidation
+          });
+        };
+        const data = await labelService.deleteLabelById(id);
+        if (data.message) {
+          return res.status(404).json({
+            message: 'label not found',
+            success: false
+          });
+        };
+        return res.status(200).json({
+          message: 'label Deleted succesfully',
+          success: true,
+          data: data
+        });
+      }catch (err) {
+        return res.status(500).json({
+          message: 'label not deleted',
+          success: false,
+          data: err
+        });
+      }
+    };
 }
 module.exports = new Label();
