# app/models/label.js
@@ -15,7 +15,7 @@ const labelSchema = mongoose.Schema({
   timestamps: true
 });
 
-const LabelRegister = mongoose.model('labelRegister', labelSchema);
+const LabelRegister = mongoose.model('LabelRegister', labelSchema);
 
 class Model {
      /**
@@ -33,30 +33,53 @@ class Model {
           .catch((error) => reject(error));
       });
     };
-
-    /**
+     /**
       * @description function written to get all labels
       * @returns data else if returns error
       *
       *
       */
-     getLabel = (id) => {
-        return new Promise((resolve, reject) => {
-          LabelRegister.find({ userId: id }).then((data) => {
-            resolve(data);
-          })
-            .catch((error) => reject(error));
-        });
-      };
-
-      /**
+    getLabel = (id) => {
+      return new Promise((resolve, reject) => {
+        LabelRegister.find({ userId: id }).then((data) => {
+          resolve(data);
+        })
+          .catch((error) => reject(error));
+      });
+    };
+     /**
       *
       * @param {*} id
       * @description retrieve all the label created
       */
     labelGetById = async (id) => {
+      try {
+        return await LabelRegister.find({ $and: [{ _id: id.noteId }, { userId: id.userId }] });
+      } catch (err) {
+        return err;
+      }
+    };
+     /**
+      * @description : updating the label
+      * @param {*} labelId
+      * @param {*} label
+      * @returns data else if returns error
+      */
+    async updateLabel (label) {
+      try {
+        return await LabelRegister.findByIdAndUpdate(label.labelId, { labelName: label.labelName }, { new: true });
+      } catch (err) {
+        return err;
+      }
+    };
+     /**
+      * @description function written to delete label
+      * @param {*} id
+      * @returns error in the case of error occurrence
+      */
+      deleteLabelById = async (id) => {
         try {
-          return await LabelRegister.find({ $and: [{ _id: id.noteId }, { userId: id.userId }] });
+          return await LabelRegister.findOneAndDelete({ $and: [{ _id: id.labelId }, { userId: id.userId }] });
         } catch (err) {
           return err;
         }
