# swagger/swagger.json
@@ -1,7 +1,7 @@
 {
-    "swagger": "2.0.0",
+    "swagger": "2.0",
     "info": {
-        "version": "1.0.0",
+        "version": "1.0",
         "title": "Fundoo Notes App",
         "description": "Fundoo Notes Application",
         "license": {
@@ -70,13 +70,14 @@
                 }
             }
         },
+
         "/forgotpassword": {
             "post": {
-                "tags": ["Forgot Password"],
+                "tags": ["forgotPassword"],
                 "description": "Send password link",
                 "parameters": [
                     {
-                        "name": "Forgot Password",
+                        "name": "forgotpassword",
                         "in": "body",
                         "description": "Sent password resent link",
                         "schema": {
@@ -95,9 +96,12 @@
                 }
             }
         },
+
         "/reset-Password": {
             "put": {
-                "tags": ["Reset Password"],
+                "tags": [
+                    "reset password"
+                ],
                 "description": "Already registered ? Then reset password successfully !!",
                 "parameters": [
         
@@ -126,6 +130,7 @@
                 }
             }
         },
+
         "/createnotes": {
             "post": {
                 "tags": [
@@ -170,6 +175,7 @@
                 }
             }
         },
+
         "/getnotes": {
             "get": {
                 "tags": [
@@ -206,6 +212,7 @@
                 }
             }
         },
+
         "/getnotes/{id}": {
             "get": {
                 "tags": [
@@ -250,6 +257,7 @@
                 }
             }
         },
+
         "/updatenotes/{id}": {
             "put": {
                 "tags": [
@@ -299,6 +307,7 @@
                 }
             }
         },
+
         "/deletenotes/{id}": {
             "delete": {
                 "tags": [
@@ -339,10 +348,215 @@
                     }
                 }
             }
+        },
+
+        "/createlabel":{
+            "post":{
+              "tags":["create label"],
+              "description":"Creates a new label",
+              "parameters":[
+                { 
+                  "in":"header",
+                "name":"authorization",
+                "description":"Token for validation",
+                "schema":{
+                  "type":"string",
+                  "required":true
+                }
+                },
+                {
+                  "in":"body",
+                  "name":"label",
+                  "description":"Label attached to note",
+                  "schema":{"$ref":"#/definitions/label"}
+                }
+              ],
+              "produces":["application/json"],
+              "responses":{
+                "201":{"description":"Label created successfully"},
+                "500":{"description":"Label Not created"},
+                "400":{"description":"Invalid Token"}
+              }
+            }  
+        },
+
+        "/getlabels":{
+            "get":{
+              "tags":["get labels"],
+              "description":"Gets all labels",
+              "parameters":[
+                {
+                  "in":"header",
+                "name":"authorization",
+                "description":"Token for validation",
+                "schema":{
+                  "type":"string",
+                  "required":true
+                }
+                }
+              ],
+              "produces":["application/json"],
+              "responses":{
+                "200":{"description":"labels retrieved"},
+                "500":{"description":"Couldnt retrieve labels"}
+              }
+            }
+        },
+
+        "/getlabel/{id}":{
+            "get":{
+              "tags":["get label by id"],
+              "description":"Gets label by id",
+              "parameters":[
+                {
+                  "in":"header",
+                  "name":"authorization",
+                  "description":"Token for validation",
+                  "schema":{
+                    "type":"string",
+                    "required":true
+                  }
+                },
+                {
+                  "in":"path",
+                  "name":"id",
+                  "description":"Label id",
+                  "schema":{
+                    "type":"string",
+                    "required":true
+                  }
+                }
+              ],
+              "produces":["application/json"],
+              "responses":{
+                "200":{"description":"label Found"},
+                "500":{"description":"label not Found"},
+                "400":{"description":"Invalid Token"}
+              }
+            }
+        },
+
+        "/updatelabel/{id}":{
+            "put":{
+              "tags":["Update label"],
+              "description":"Updates label",
+              "parameters":[
+                {
+                  "in":"header",
+                  "name":"authorization",
+                  "description":"Token for validation",
+                  "schema":{
+                    "type":"string",
+                    "required":true
+                }
+              },
+              {
+                "in":"path",
+                "name":"id",
+                "description":"Label id",
+                "schema":{
+                  "type":"string",
+                  "required":true
+                }
+              },
+              {
+                "in":"body",
+                "name":"label",
+                "description":"Label to be updated",
+                  "schema":{"$ref":"#/definitions/label"}
+                }
+              ],
+              "produces":["application/json"],
+              "responses":{
+                "200":{"description":"label updated"},
+                "500":{"description":"Failed to update label"},
+                "400":{"description":"Invalid Token"}
+              }
+            }
+        },
+
+        "/deletelabel/{id}": {
+            "delete": {
+                "tags": [
+                    "Delete Label"
+                ],
+                "description": "Delete a label by ID for perticuler person id !!",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "Authorization",
+                        "description": "Token for vaidation",
+                        "schema": {
+                            "type": "string",
+                            "required": true
+                        }
+                    },
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "Id of label you want to delete",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Delete note succesfully !!"
+                    },
+                    "401": {
+                        "description": "Please enter Valid Token"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/addlabel/{id}":{
+            "post":{
+              "tags":["Add label"],
+              "description":"Added label",
+              "parameters":[
+                {
+                  "in":"header",
+                  "name":"authorization",
+                  "description":"Token for validation",
+                  "schema":{
+                    "type":"string",
+                    "required":true
+                }
+              },
+              {
+                "in":"path",
+                "name":"id",
+                "description":"Note id",
+                "schema":{
+                  "type":"string",
+                  "required":true
+                }
+              },
+              {
+                "in":"body",
+                "name":"addlabel",
+                "description":"Label to be updated",
+                  "schema":{"$ref":"#/definitions/addlabel"}
+                }
+              ],
+              "produces":["application/json"],
+              "responses":{
+                "200":{"description":"label added"},
+                "500":{"description":"Failed to add label"},
+                "400":{"description":"Invalid Token"}
+              }
+            }
         }
-    
     },
-       
+    
+
     "definitions": {
         "registerUser": {
             "type": "object",
@@ -426,6 +640,24 @@
                 "title": "Write a title here.....",
                 "description": "Write a description here....."
             }
+        },
+
+        "label":{
+            "type":"object",
+            "properties":{
+              "labelName":{
+                "type":"string"
+              }
+            }
+        },
+
+        "addlabel":{
+            "type":"object",
+            "properties":{
+                "labelName":{
+                  "type":"string"
+                }
+              }
         }
     }
 }
